# src/main/resources/openapi/api.yaml
@@ -286,31 +286,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /authors/{id}/books:
-    post:
-      summary: Create book for author
-      operationId: createBookForAuthor
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BookCreateRequest'
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BookResponse'
-
   /courses/{id}:
     get:
       summary: Get course by id
@@ -600,6 +575,10 @@ components:
           type: string
           minLength: 2
           maxLength: 50
+        books:
+          type: array
+          items:
+            $ref: '#/components/schemas/BookCreateRequest'
     AuthorUpdateRequest:
       type: object
       properties:
@@ -632,8 +611,6 @@ components:
           maxLength: 100
     BookUpdateRequest:
       type: object
-      required:
-        - id
       properties:
         id:
           type: string
